Removed java.util.Base64 for compatibility with older Java <1.8 VMs.